fix bug 获取文本列表

--- a/content-share-server/package.json
+++ b/content-share-server/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/liuyang-zhituanbox/content-share/issues"
   },
-  "homepage": "https://github.com/liuyang-zhituanbox/content-share#readme"
+  "homepage": "https://github.com/liuyang-zhituanbox/content-share#readme",
+  "dependencies": {
+    "cache-manager": "^3.2.1",
+    "express": "^4.17.1"
+  }
 }
